--- a/front/front/public/index.css
+++ b/front/front/public/index.css
@@ -13,8 +13,19 @@
 
 /*이혜민 작성성*/
 
-.todoList {
-  border: 2px solid pink;
+img {
+  width: 300px;
+  height: 60px;
+}
+
+span {
+  color: white;
+  font-weight: bold;
+  font-size: 40pt;
+}
+
+.list-zone {
+  width: 800px;
 }
 
 .checked {
@@ -28,10 +39,39 @@ input[type="button"] {
 
 /* 1단 */
 @media screen and (max-width: 540px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #04c82f;
+    padding: 20px;
+  }
+  .todoList {
+    border: 2px solid pink;
+  }
 }
 /* 2단 */
 @media screen and (max-width: 960px) {
+  header {
+    background-color: #04c82f;
+    padding: 20px;
+    text-align: center;
+  }
+  .todoList {
+    display: grid;
+    grid-template-rows: 400px 400px;
+    border: 2px solid pink;
+  }
 }
 /* 4단 */
 @media screen and (min-width: 960px) {
+  header {
+    background-color: #04c82f;
+    padding: 20px;
+    text-align: center;
+  }
+  .todoList {
+    border: 2px solid pink;
+  }
 }
