--- a/front/front/public/index.css
+++ b/front/front/public/index.css
@@ -24,10 +24,6 @@ span {
   font-size: 40pt;
 }
 
-.list-zone {
-  width: 800px;
-}
-
 .checked {
   color: red;
   text-decoration: line-through;
@@ -66,6 +62,9 @@ input[type="button"] {
 }
 /* 4단 */
 @media screen and (min-width: 960px) {
+  .list-zone {
+    max-width: 800px;
+  }
   header {
     background-color: #04c82f;
     padding: 20px;
